kubernetes/go/go-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-service-ingress
  namespace: my-restaurant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /orders
        backend:
          serviceName: go-service-svc
          servicePort: 15779
